Fixing table content alignment

--- a/LMS/home/lms.css
+++ b/LMS/home/lms.css
@@ -57,6 +57,7 @@ table {
 
 table, th, td {
   border: 1px solid rgb(63, 63, 63);
+  text-align: center;
 }
 
 tr {
